# molting3-cortex

./: _STATUS.md  _index  index.html  package-lock.json  package.json
docs/: 01_架构备忘_完整对话记录.md  02_模块数据模型设计.md  2026-06-23_p0-rust-scan-engine.md
modules/: _wtest.md  bookmarks.md  clouddrive.md  code-channel.md  contacts.md  image-enhance.md  md-reader.md  mobile-app.md  molting3-cortex.md  output_bookmarks.md  output_weather_api_layer.md  output_weather_data_depth.md  output_weather_feedback_ui.md  output_weather_location_icons.md  output_weather_settings_v2.md  qclaw-alt.md  scripts.md  status_bookmarks.md  status_cortex.md  status_md_reader.md  status_weather_app.md  topic_architecture.md  topic_coding_agent.md  topic_weather_desktop.md  topic_weather_layers.md  topic_weather_location.md  topic_weather_waterline.md  weather.md
modules/_registry/: status_card.md
modules/weather/: 5tab-architecture.md  amap-adapter.md  apk-releases.md  attack-timeline.md  caiyun-adapter.md  caiyun-page.md  cma-adapter.md  cors-solution.md  custom-page.md  five-source-fusion.md  http-client.md  key-files.md  midou-weather-root.md  openmeteo-source.md  qweather-adapter.md  qweather-page.md  rhythm-bar.md  weight-algo.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: dep_graph.rs  lib.rs  main.rs  watcher.rs
src/components/: TopBar.tsx
src/components/modules/: OutputList.tsx  StatusCard.tsx  TopicCard.tsx
src/lib/: dev-modules.ts  loader.ts  store.ts  tauri-api.ts
src/types/: module.ts
views/: default_dashboard.md
(+3 files in other folders)
