[package]
name = "molting3-cortex"
version = "0.1.0"
description = "molting3 中枢神经系统 — 模块化子弹管理界面"
authors = ["编程主管"]
edition = "2021"

[lib]
name = "molting3_cortex_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
